--- a/foottball-lobby/app/src/main/res/values/strings.xml
+++ b/foottball-lobby/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Football-lobby</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="facebook_app_id">1355105218256175</string>
+    <string name="fb_login_protocol_scheme">fb1355105218256175</string>
 </resources>
